force-app/main/default/objects/Reconciliation_Batch__c/Reconciliation_Batch__c.object-meta.xml
<CustomObject>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1.This object will house each batched Collection Allocation records.</description>
    <label>Reconciliation Batch</label>
    <nameField>
        <displayFormat>RB-{0000000}</displayFormat>
        <label>Reconciliation Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>