force-app/main/default/objects/Reconciliation_Batch__c/fields/All_Payment_Summary__c.field-meta.xml
<CustomField>
    <fullName>All_Payment_Summary__c</fullName>
    <label>All Payment Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>