force-app/main/default/objects/Reconciliation_Batch__c/fields/Batch_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Time__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Batch Time</label>
    <type>DateTime</type>
</CustomField>