force-app/main/default/objects/Reconciliation_Batch__c/fields/CashierSession__c.field-meta.xml
<CustomField>
    <fullName>CashierSession__c</fullName>
    <label>Cashier Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>