force-app/main/default/objects/Reconciliation_Batch__c/fields/Number_of_Collection_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Collection_Allocations__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Number of Collection Allocations</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>