force-app/main/default/objects/Reconciliation_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Sent To 4Gov</fullName>
                <label>Sent To GL</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
                <isActive>false</isActive>
                <label>Email Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>