force-app/main/default/objects/Reconciliation_Batch__c/fields/Sum_of_Amount_Allocated_from_Payment__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Amount_Allocated_from_Payment__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Sum of Amount Allocated from Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>