force-app/main/default/objects/Reconciliation_Batch__c/fields/Sum_of_Cashier_Code__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Cashier_Code__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Sum of Cashier Code</label>
    <length>16768</length>
    <type>LongTextArea</type>
</CustomField>