force-app/main/default/objects/Reconciliation_Batch__c/fields/Sum_of_Credit_Card_Payments__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Credit_Card_Payments__c</fullName>
    <label>Sum of Credit Card Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>