force-app/main/default/objects/Reconciliation_Batch__c/fields/Sum_of_Non_Credit_Card_Payments__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Non_Credit_Card_Payments__c</fullName>
    <description>PacPoint-CZ101919 - Created for 4GOV phase 1</description>
    <label>Sum of Non Credit Card Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>