force-app/main/default/objects/Reconciliation_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Time__c</columns>
    <columns>Number_of_Collection_Allocations__c</columns>
    <columns>Sum_of_Non_Credit_Card_Payments__c</columns>
    <columns>Sum_of_Cashier_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>